@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{39,38,37,36,35,py3}
+    py3{11,10,9,8,7},pypy3{8,7}
     style
 
 [testenv]
